--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "express": "^4.18.2",
     "install": "^0.13.0",
+    "mongoose": "^6.8.1",
     "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-social-login-buttons": "^3.6.1",
     "redux": "^4.0.5",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
